fix: trigger z-index

--- a/src/components/builder/triggerBlock/triggerBlock.module.scss
+++ b/src/components/builder/triggerBlock/triggerBlock.module.scss
@@ -5,6 +5,7 @@
   margin: 0 28px;
   min-width: 296px;
 
+
   @media screen and (max-width: $switching-width) {
     margin: 0 auto;
   }
@@ -16,7 +17,7 @@
   box-sizing: border-box;
   overflow-y: scroll;
   background-color: $off-white;
-  z-index: 101;
+  z-index: 100;
   transition: all .3s linear;
 
   box-shadow: $m-box-shadow;
